# Roots

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Interpreter/: CMakeLists.txt  errorHandler.cpp  errorHandler.hpp  expression.cpp  expression.hpp  lexer.cpp  lexer.hpp  logger.cpp  logger.hpp  main.cpp  parser.cpp  parser.hpp  roots.cpp  roots.hpp  token.cpp  token.hpp  types.hpp
Interpreter/generics/: Ast.cpp  Ast.hpp
Interpreter/memory/: ArenaAllocators.cpp  ArenaAllocators.hpp  BulkAllocator.cpp  BulkAllocator.hpp  memoryUnits.hpp
Interpreter/runtime/: compiler.cpp  compiler.hpp  decompiler.cpp  decompiler.hpp  instructions.hpp  interpreter.cpp  interpreter.hpp  rootObjects.cpp  rootObjects.hpp  virtualMachine.cpp  virtualMachine.hpp
Interpreter/tools/: astPrettyPrinter.cpp  astPrettyPrinter.hpp
examples/: main.rts
reference/: CMakeLists.txt  main.cxx
roots/: CMakeLists.txt  assert.hpp  define.cxx  lexer.cxx  lexer.hpp  logger.cxx  logger.hpp  parser.cxx  parser.hpp  repl.cxx  roots.cxx  roots.hpp  source.cxx
roots/include/: repl.hpp  source.hpp  types.hpp
